--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -121,3 +121,129 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a><br>
 <br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/19920513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
+<p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
+<hr><h2><p><strong>新闻排行</strong></p></h2>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/Columbusr3/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/public/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://github.com/19920513/www/blob/master/README.md?fq#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/Despinadf9/vdzjmd1_19/raw/master/public/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/qwertyui12/ww/-/raw/main/Falsefire.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/Davidngwy/vdTdowhauWx9WiM/raw/master/public/TdowhauWx9WiM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/Dirkchel/vd3-JTT_CN_MH-360p/raw/master/public/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://github.com/19920513/www/blob/master/README.md?fq#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://github.com/19920513/www/blob/master/README.md?fq#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://github.com/19920513/www/blob/master/README.md?fq#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/Conradfjd/vder3n_3VVJ/raw/master/public/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/Conradhm9/vdXmL0_0XDL2p/raw/master/public/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/connieas2m/vdNG8l/raw/master/public/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/conroy6uj/vdwt6Y_vPhM/raw/master/public/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/Cherlynjt4/vd5Vu3_XS2V/raw/master/public/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/Classiedfw/vdvG2w_fwq/raw/master/public/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/classie65q/vdO2jN_uD/raw/master/public/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/Dodiegin6/vd1400forge-1210/raw/master/public/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/Dirkgj9/vdC1WZ_mj/raw/master/public/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://github.com/19920513/www/blob/master/README.md?fq#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/Connordgy/vdJZ5e_5Vusp/raw/master/public/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/Conradtfdc/vd0iY/raw/master/public/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/Doloresank/vdguanguimin/raw/master/public/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/conradti6i/vdmjjy/raw/master/public/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/Connorfb9/vdc4rB_QQbr/raw/master/public/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/Zhai.Qiao.Ling.Shi571175/vdO23c_E/raw/master/public/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.227.123.112/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 50,661</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+
+```diff
+!退出中共党、团、队总人数:
+
+!共 421,143,652 人
+```
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104954.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/10/id14104967-3cedcea9388d76cd85fa970f7dfc670d-320x200.png"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104954.md#1">因反对封城批评李强 沪维权人士季孝龙获重刑</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103794.md#1">中共严防“辱毛辱包 ” 凸显小粉红的玻璃心</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104411.md#1">美委员会委员：支持中国人退党 追求自由</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104064.md#1">持续追问叶钟死亡真相 福建访民遭恐吓威胁</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103369.md#1">宁夏访民遭警察绑架 被反控“妨害公务”拘留</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103082.md#1">除夕不放假 陆民：谁敢高呼王侯将相宁有种乎</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105229.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/12/id13456040-000_9MU28K-600x400-1-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105229.md#1">恒大会制造香港史上最大地产商清盘案吗</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105185.md#1">深圳二手房市场疲软 豪宅降价百万求售</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105120.md#1">中国五大猪企前三季度合计亏损156亿</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105114.md#1">中国房企华侨城业绩剧降 前三季度亏损33亿</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105102.md#1">深圳万科三季报业绩大幅下滑 净利润降22.5%</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104966.md#1">专家：韩德产业依赖中国陷低迷 台湾要警惕</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105076.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105106-Screenshot-2023-10-28-at-22.01.47-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105076.md#1">分析：李克强离世 或将为中共政局再添变数</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104629.md#1">【热点互动】柯文哲选战策略？郭台铭难顶压力</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105100.md#1">应对中共挑战 印度采购26架舰载型阵风战机</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105047.md#1">中菲船只相撞 美菲防长通话并发表联合声明</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105059.md#1">李克强去世 市场对中共经济改革彻底死心</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104871.md#1">【全球新闻】李克强去世 中共急于发丧太反常</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105366.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105366.md#1">中国气温异常 多地最高温近30℃ 新疆将降暴雪</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105346.md#1">深圳欢乐谷过山车相撞伤者众多 四人进ICU</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105271.md#1">哈尔滨一居民小区煤气罐爆炸 致1死4伤</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104938.md#1">山东19岁女生在校跳楼身亡 原因不明</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104511.md#1">130人中毒 其中7人亡 安徽武校投毒案细节曝光</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104253.md#1">深圳欢乐谷过山车追尾 八人受伤</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105365.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105365.md#1">“尿不湿小孩”与残疾母深圳街头乞讨 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105306.md#1">三退声明精选（2023/10/28）</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105191.md#1">大陆年轻人热衷买彩票 有人日花三万</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104455.md#1">三退声明精选（2023/10/27）</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104301.md#1">上海市民：坐等看李克强追悼会的规格如何</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104694.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/10/id14104698-2310272249452378-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104694.md#1">美国芯片计划办公室两名资深官员访台</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104463.md#1">暨南大学81名新生放弃入学资格 引热议</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102679.md#1">广东一技校无老师到校授课 近700学生退学</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102366.md#1">29日凌晨迎“月偏食” 观赏时间方位等一览</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096663.md#1">谷村新司病逝 歌曲曾被邓丽君张学友等众星翻唱</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096288.md#1">世客博1100万人参观 赖清德赞客家文化里程碑</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047532.md#1">前沈阳陆军总院实习医生 爆出更多活摘内幕（上）</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047407.md#1">独家：1月6日案律师透露为川普辩护的策略</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016183.md#1">从反送中到走线 原深圳健身教练的抗共之路</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011551.md#1">【中国观察】中南海的“文化骗局”</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/5/15/n13997439.md#1">独家：英国大学接受华为三千万英镑捐赠</a><br>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103177.md#1">遗失百年的卡诺瓦《舞钹的少女》雕像重现柏林</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097576.md#1">【古道人生】涂了道士给的眼药后能见到鬼的人</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a><br>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/19920513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/19920513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/19920513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105189.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105368-IMG_0224-320x200.jpg"><p align="center">澳大利亚法会 法轮功学员畅谈修炼故事</p></a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105189.md#1" title="澳大利亚法会 法轮功学员畅谈修炼故事""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105368-IMG_0224-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105295.md#1" title="恒大爆雷冲击金融系统 民生银行陷风暴眼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105296-GettyImages-77329304-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105272.md#1" title="独家专访：上海东郊宾馆内幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105273-GettyImages-624779698-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105223.md#1" title="G7吁立即废除对日本海鲜禁令 向中共施压""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/08/id14059625-631331-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104855.md#1" title="组图：全球服役最多的十种军机 “黑鹰”居首""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14104863-GettyImages-1166234634-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104601.md#1" title="关于美国众院新议长约翰逊的30件事""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14104611-00-LEAD-Who-is-Mike-Johnson-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105113.md#1" title="以色列总理宣布战争进入第二阶段""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105115-000_33ZE9G7-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105099.md#1" title="李克强猝死 分析：中共党内斗争是死亡诱因""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105146-GettyImages-653466812-600x400-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102924.md#1" title="干净世界推出新变现计划 创作者可得80%收入""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14102929-Screen-Shot-2023-10-25-at-2.55.05-PM-320x200.png">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105046.md#1" title="布林肯王毅会谈逾7小时 盘点美中冲突领域""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105064-000_33ZA7KH-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104563.md#1" title="李克强离世 法学家：极大动摇习近平权威""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/03/id13952008-GettyImages-1471369470_light-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105035.md#1" title="动用高科技武器 美韩举行未来联合作战演习""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/10/id14105045-GettyImages-1244072173-320x200.jpg">&nbsp;</a>
+<p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100214.md#1">拒5千万澳元售5英亩房产 悉尼一房主的坚持</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101998.md#1">组图：被圈养20年的马戏团老熊终获救</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105412.md#1">富士康遭查税 分析：关键原因为中共内斗</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104989.md#1">【名家专栏】川普前法律顾问达成认罪协议的背后</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105382.md#1">台民众党不分区拟纳中共干部 赖柯交锋</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105033.md#1">陷冤狱11年 法轮功学员严精华被剥夺养老金</a><br>
+<hr><h2><p><strong>新闻排行</strong></p></h2>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104250.md#1">蔡慎坤：重要人士透露李克强真实死因令人震惊</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104659.md#1">网传李克强曾被送往上海曙光医院救治</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104799.md#1">传李克强遗体已从上海运回北京</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104866.md#1">民众涌向李克强故居献花 被指表达对社会不满</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104413.md#1">为何李克强猝死给习近平带来危险</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104853.md#1">李克强吴尊友同日传死讯 大陆民间怎么看</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104422.md#1">赵兰健：学校秘密开会 中共严控悼念李克强</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104418.md#1">严防六四重演？“李克强”成敏感词</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a><br>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101805.md#1">【特稿】进化假说使科学误入歧途（中）</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/30/n14085461.md#1">秦时：许家印成中共弃卒 中共成世界弃子</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083841.md#1">钟原：习取代李强讲话 十一活动现异常</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14084412.md#1">王友群：习、曾斗的又一个标志性事件</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083883.md#1">大纪元历史录入国会记录 美议员赠精美框匾</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081007.md#1">【特稿】进化假说使科学误入歧途（上）</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079971.md#1">沈舟：乌克兰反攻即将迎来关键时刻</a><br>
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105099.md#1">李克强猝死 分析：中共党内斗争是死亡诱因</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105184.md#1">杨威：中共急盼拜习会 戏演过头</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105218.md#1">千百度：李克强猝死与毛泽东对王明下毒</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105046.md#1">布林肯王毅会谈逾7小时 盘点美中冲突领域</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105150.md#1">中共防长悬空 两军委副主席香山论坛见外宾</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105121.md#1">袁斌：李克强去世究竟是正常还是非正常死亡？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105166.md#1">分析：拜登习近平11月会谈的背后原因</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105209.md#1">中华民国国旗和中共血旗罕见同框 引热议</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104699.md#1">【翻墙必看】分析：李克强讣告或被动了手脚</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105071.md#1">王友群：李克强当年差点上江泽民的当</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102924.md#1">干净世界推出新变现计划 创作者可得80%收入</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105287.md#1">悼李克强者被监控？ 传公安查祭奠物品网购信息</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105033.md#1">陷冤狱11年 法轮功学员严精华被剥夺养老金</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105107.md#1">【菁英论坛】习拜会 传中共要求“拜登微笑”</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105060.md#1">分析：李克强死在敏感时间点 标志团派终结</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105037.md#1">习拿下李尚福秦刚 “九大”现象再现？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104642.md#1">李克强与毛去世时间吻合 巧合还是人为？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104541.md#1">【新闻五人行】李克强死疑点多 习有更致命危机</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104553.md#1">李克强猝死 66名中共省部级高官密集病亡</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104544.md#1">万科称进入“撞墙期” 中国地产泡沫已破</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104405.md#1">如何被党同化的？李克强悲剧远未落幕</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104499.md#1">拜登在白宫见王毅 会谈1小时</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104341.md#1">【新闻大破解】王毅赴美摸底 解析拜习潜台词</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103804.md#1">【时事金扫描】以突袭加沙 美新议长让中共心惊</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103829.md#1">【十字路口】李克强神秘猝死 习大限也告急？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102108.md#1">【百年真相】周恩来女秘自尽之谜</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104147.md#1">袁红冰：李克强之死非重点 习另有致命危机</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104279.md#1">【一线采访】河南大额储户讨要存款的悲惨遭遇</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104194.md#1">中疾控专家、全国政协委员吴尊友罹癌身亡</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103814.md#1">【新闻五人行】习躲政变 除夕不放假 全网热议</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103778.md#1">【菁英论坛】习普密谋5件事 台海开新战场？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103785.md#1">【秦鹏观察】最反共的美议长来了 5大特点</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103699.md#1">王毅见布林肯 专家析习近平与美缓和背后</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103770.md#1">助习推“石油人民币” 普京在印度碰壁</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103740.md#1">中共在香港大发“点心债” 背后目的恐难实现</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102878.md#1">被中共剥夺养老金 七旬老人在贫病中含冤离世</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103393.md#1">经济现“四市齐杀”中共发万亿国债能解困？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103692.md#1">中国约百家企业被曝有类似恒大债务问题</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14103005.md#1">美国艺术团在韩演出受阻 美国会议员关注</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103487.md#1">专家：习近平未能摆平军内反弹 致新防长难产</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102950.md#1">分析：王毅访美为何难改习当局外交困境</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103081.md#1">岳山：除夕假被取消 疑涉习近平心病</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102468.md#1">分析：中国青年拜佛躺平是对中共软抵抗</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14103023.md#1">【新唐人快报】习服软向美频示好 期待拜习会？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103325.md#1">4院士28教授密集病亡 17人为中共党员</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102855.md#1">专访许成钢：中共救房企救不了市场 危机深重</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102960.md#1">章子怡汪峰因金融爆雷离婚？爆料涉孙俪邓超</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102966.md#1">【菁英论坛】敲打富士康 中共有更大谋划</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102904.md#1">王友群：中共确实不代表中国人民</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102879.md#1">怕被割韭菜 红二代纷纷向海外转移资产</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102834.md#1">【新闻大破解】王毅将访美 战狼转示弱有诈？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102803.md#1">【时事金扫描】中共查富士康 台湾大选眼花缭乱</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102785.md#1">【新闻大家谈】习近平罕见异动 李强危险？</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102501.md#1">【中国观察】公务员扩招背后的财政秘密</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102153.md#1">法轮功学员张晶绝食维护信仰 要求无罪释放</a><br>
